@@ -35,6 +35,7 @@ class CLIClushConfigTest(unittest.TestCase):
 """)
 
         parser = OptionParser("dummy")
+        parser.install_config_options()
         parser.install_display_options(verbose_options=True)
         parser.install_connector_options()
         options, _ = parser.parse_args([])
@@ -60,6 +61,7 @@ class CLIClushConfigTest(unittest.TestCase):
 """)
 
         parser = OptionParser("dummy")
+        parser.install_config_options()
         parser.install_display_options(verbose_options=True)
         parser.install_connector_options()
         options, _ = parser.parse_args([])
@@ -95,6 +97,7 @@ verbosity: 1
 
         f.flush()
         parser = OptionParser("dummy")
+        parser.install_config_options()
         parser.install_display_options(verbose_options=True)
         parser.install_connector_options()
         options, _ = parser.parse_args([])
@@ -135,6 +138,7 @@ ssh_options: -oStrictHostKeyChecking=no
 
         f.flush()
         parser = OptionParser("dummy")
+        parser.install_config_options()
         parser.install_display_options(verbose_options=True)
         parser.install_connector_options()
         options, _ = parser.parse_args([])
@@ -171,6 +175,7 @@ ssh_options: -oStrictHostKeyChecking=no
 
         f.flush()
         parser = OptionParser("dummy")
+        parser.install_config_options()
         parser.install_display_options(verbose_options=True)
         parser.install_connector_options()
         options, _ = parser.parse_args([])
@@ -227,6 +232,7 @@ verbosity: 1
 
         f.flush()
         parser = OptionParser("dummy")
+        parser.install_config_options()
         parser.install_display_options(verbose_options=True)
         parser.install_connector_options()
         options, _ = parser.parse_args([])
@@ -263,6 +269,7 @@ verbosity: 1
 
         f.flush()
         parser = OptionParser("dummy")
+        parser.install_config_options()
         parser.install_display_options(verbose_options=True)
         parser.install_connector_options()
         options, _ = parser.parse_args(["-f", "36", "-u", "3", "-t", "7",
@@ -290,6 +297,7 @@ verbosity: 1
         # This test needs installed configuration files (needed for
         # maximum coverage).
         parser = OptionParser("dummy")
+        parser.install_config_options()
         parser.install_display_options(verbose_options=True)
         parser.install_connector_options()
         options, _ = parser.parse_args([])
@@ -332,6 +340,7 @@ ssh_options: -oSomeDummyUserOption=yes
 
             cfgfile.flush()
             parser = OptionParser("dummy")
+            parser.install_config_options()
             parser.install_display_options(verbose_options=True)
             parser.install_connector_options()
             options, _ = parser.parse_args([])
