@@ -1,3 +1,8 @@
+2015-10-25 S. Thiell <sthiell@stanford.edu>
+
+	* Clush.py: added --config-options/-O clush.conf settings override (pull
+	request #248).
+
 2015-10-18 S. Thiell <sthiell@stanford.edu>
 
 	* Clush.py: added --hostfile command line option to specify a file
